GNOME Bugzilla – Bug 744148
gtk: x: fix compilation without x11 backend
Last modified: 2015-02-12 11:19:07 UTC
We need to protect the autocleanup declarations against X11, other they refer to non existing types.
Created attachment 296350 [details] [review] gtk: x: fix compilation without x11 backend
Review of attachment 296350 [details] [review]: The content of the bug description should go in the commit message.
Review of attachment 296350 [details] [review]: Pushed to master.
Oops, for some reason my brain failed to read your comment... I pushed without the commit message, sorry for that.
not the end of the world