gtk: x: fix compilation without x11 backend

https://bugzilla.gnome.org/show_bug.cgi?id=744148